IC2/parser/langX.java
/* Generated By:JavaCC: Do not edit this line. langX.java */
package parser;

import java.io.*;
import recovery.*;   // importa as classes de recupera��o de erros do AS


public class langX implements langXConstants {
final static String Version = "X++ Compiler - Version 1.0 - 2004";
int contParseError = 0;           // contador de erros sint�ticos
boolean debug_recovery;   // controla verbose de recupera��o de erros
Token lastError = null;


// Define o m�todo "main" da classe langX.  
  public  static void main(String args[]) throws ParseException
  {
  boolean debug_as = false;
  boolean debug_recovery = false;

    String filename = ""; // nome do arquivo a ser analisado
    langX parser;     // analisador l�xico/sint�tico
    int i;
    boolean ms = false;

    System.out.println(Version);
    // l� os par�metros passados para o compilador
    for (i = 0; i < args.length - 1; i++)
    {
        if (args[i].equals("-debug_AS") )
            debug_as = true;
        else
        if (args[i].equals("-debug_recovery") )
            debug_recovery = true;
        else
        {
            System.out.println("Usage is: java langX [-debug_AS] " +
             "[-debug_recovery] inputfile");
            System.exit(0);
        }
    }

    if (args[i].equals("-"))
    {       // l� da entrada padr�o      
        System.out.println("Reading from standard input . . .");
        parser = new langX(System.in); // cria AS
     }
     else
    {       // l� do arquivo
        filename = args[args.length-1];
        System.out.println("Reading from file " + filename + " . . .");
        try {  // cria AS
            parser = new langX(new java.io.FileInputStream(filename));
        }
    catch (java.io.FileNotFoundException e) {
               System.out.println("File " + filename + " not found.");
        return;
        }
    }

    parser.debug_recovery = debug_recovery;
    if (! debug_as) parser.disable_tracing(); // desab. verbose do AS
    try {
        parser.program();   // chama o m�todo que faz a an�lise
    }
    catch (ParseEOFException e)
    {
    System.err.println(e.getMessage());
    }
    finally {
        System.out.println(parser.token_source.foundLexError() +
                                " Lexical Errors found");
        System.out.println(parser.contParseError + " Syntactic Errors found");
     }

}  // main

static public String im(int x)
{
int k;
String s;
   s = tokenImage[x];
   k = s.lastIndexOf("\u005c"");
   try {s = s.substring(1,k);}
   catch (StringIndexOutOfBoundsException e)
   {}
   return s;
}


boolean eof;    // vari�vel que indica se EOF foi alcan�ado
// o m�todo abaixo consome tokens at� alcan�ar um que perten�a ao conjunto
// de sincroniza��o

void consumeUntil(RecoverySet g,
                 ParseException e,
                 String met) throws ParseEOFException,
                                    ParseException
{
Token tok;

   if ( debug_recovery) // informa��o sobre a recupera��o
   {
       System.out.println();
       System.out.println("*** " + met + " ***");
       System.out.println("     Syncronizing Set: " + g);
   }

   if (g == null) throw e; // se o conjunto � null, propaga a exce��o

   tok = getToken(1); // pega token corrente
   while ( ! eof )  // se n�o chegou ao fim do arquivo
   {
        if ( g.contains(tok.kind ) ) //achou um token no conjunto
        {
             if ( debug_recovery)
               System.out.println("     Found syncronizing token: " +
                                   im(tok.kind));
             break;
        }
        if (debug_recovery)
             System.out.println("     Ignoring token: " + im(tok.kind));
        getNextToken();     // pega pr�ximo token       
        tok = getToken(1);
        if (tok.kind == EOF && ! g.contains(EOF) ) // fim da entrada?   
            eof = true;
    }
   if ( tok != lastError)
   {
        System.out.println(e.getMessage());
        lastError = tok;
        contParseError++;  // incrementa n�mero de erros
   }
   if ( eof ) throw new ParseEOFException("EOF found prematurely.");
}

  final public void program() throws ParseException, ParseEOFException {
    trace_call("program");
    try {
RecoverySet g = First.program;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 0:
        jj_consume_token(0);
        break;
      case CLASS:
      case FINAL:
      case PUBLIC:
      case PRIVATE:
      case PROTECTED:
        classlist(g);
        try {
          jj_consume_token(0);
        } catch (ParseException e) {
       consumeUntil(g, e, "program");
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 0:
        case CLASS:
        case FINAL:
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
          program();
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("program");
    }
  }

  final public void classlist(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classlist");
    try {
RecoverySet f = First.classlist.union(g);
      classdecl(f);
      if (jj_2_1(2)) {
        classlist(g);
      } else {
        ;
      }
    } finally {
      trace_return("classlist");
    }
  }

  final public void classdecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classdecl");
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PUBLIC:
            jj_consume_token(PUBLIC);
            break;
          case PRIVATE:
            jj_consume_token(PRIVATE);
            break;
          case PROTECTED:
            jj_consume_token(PROTECTED);
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FINAL:
          jj_consume_token(FINAL);
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        jj_consume_token(CLASS);
        jj_consume_token(IDENT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXTENDS:
          jj_consume_token(EXTENDS);
          jj_consume_token(IDENT);
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        classbody(g);
      } catch (ParseException e) {
    consumeUntil(g, e, "classdecl");
      }
    } finally {
      trace_return("classdecl");
    }
  }

  final public void classbody(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classbody");
    try {
RecoverySet f2 = new RecoverySet(SEMICOLON).union(g).remove(IDENT),
            f3 = First.methoddecl.union(g).remove(IDENT),
            f4 = First.constructdecl.union(f3).remove(IDENT),
            f5 = First.vardecl.union(f4).remove(IDENT);
      try {
        jj_consume_token(LBRACE);
        if (jj_2_2(3)) {
          classlist(f5);
        } else {
          ;
        }
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CONSTRUCTOR:
          case INT:
          case STRING:
          case BYTE:
          case SHORT:
          case LONG:
          case FLOAT:
          case FINAL:
          case PUBLIC:
          case PRIVATE:
          case PROTECTED:
          case IDENT:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_1;
          }
          if (jj_2_3(4)) {
            vardecl(f2);
            jj_consume_token(SEMICOLON);
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case CONSTRUCTOR:
              constructdecl(f4);
              break;
            default:
              jj_la1[7] = jj_gen;
              if (jj_2_4(4)) {
                methoddecl(f3);
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
        jj_consume_token(RBRACE);
      } catch (ParseException e) {
   consumeUntil(g, e, "classbody");
      }
    } finally {
      trace_return("classbody");
    }
  }

  final public void vardecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("vardecl");
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PUBLIC:
            jj_consume_token(PUBLIC);
            break;
          case PRIVATE:
            jj_consume_token(PRIVATE);
            break;
          case PROTECTED:
            jj_consume_token(PROTECTED);
            break;
          default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FINAL:
          jj_consume_token(FINAL);
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BYTE:
          jj_consume_token(BYTE);
          break;
        case SHORT:
          jj_consume_token(SHORT);
          break;
        case LONG:
          jj_consume_token(LONG);
          break;
        case FLOAT:
          jj_consume_token(FLOAT);
          break;
        case INT:
          jj_consume_token(INT);
          break;
        case STRING:
          jj_consume_token(STRING);
          break;
        case IDENT:
          jj_consume_token(IDENT);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(IDENT);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACKET:
            ;
            break;
          default:
            jj_la1[12] = jj_gen;
            break label_2;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[13] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          jj_consume_token(IDENT);
          label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACKET:
              ;
              break;
            default:
              jj_la1[14] = jj_gen;
              break label_4;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
          }
        }
      } catch (ParseException e) {
   consumeUntil(g, e, "vardecl");
      }
    } finally {
      trace_return("vardecl");
    }
  }

  final public void constructdecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("constructdecl");
    try {
      try {
        jj_consume_token(CONSTRUCTOR);
        methodbody(g);
      } catch (ParseException e) {
   consumeUntil(g, e, "constructdecl");
      }
    } finally {
      trace_return("constructdecl");
    }
  }

  final public void methoddecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("methoddecl");
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
        case PRIVATE:
        case PROTECTED:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PUBLIC:
            jj_consume_token(PUBLIC);
            break;
          case PRIVATE:
            jj_consume_token(PRIVATE);
            break;
          case PROTECTED:
            jj_consume_token(PROTECTED);
            break;
          default:
            jj_la1[15] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FINAL:
          jj_consume_token(FINAL);
          break;
        default:
          jj_la1[17] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BYTE:
          jj_consume_token(BYTE);
          break;
        case SHORT:
          jj_consume_token(SHORT);
          break;
        case LONG:
          jj_consume_token(LONG);
          break;
        case FLOAT:
          jj_consume_token(FLOAT);
          break;
        case INT:
          jj_consume_token(INT);
          break;
        case STRING:
          jj_consume_token(STRING);
          break;
        case IDENT:
          jj_consume_token(IDENT);
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACKET:
            ;
            break;
          default:
            jj_la1[19] = jj_gen;
            break label_5;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
        }
        jj_consume_token(IDENT);
        methodbody(g);
      } catch (ParseException e) {
   consumeUntil(g, e, "methoddecl");
      }
    } finally {
      trace_return("methoddecl");
    }
  }

  final public void methodbody(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("methodbody");
    try {
RecoverySet f = new RecoverySet(RPAREN).union(g);
      try {
        jj_consume_token(LPAREN);
        paramlist(f);
        jj_consume_token(RPAREN);
        statement(g);
      } catch (ParseException e) {
   consumeUntil(g, e, "methodbody");
      }
    } finally {
      trace_return("methodbody");
    }
  }

  final public void paramlist(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("paramlist");
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case STRING:
        case BYTE:
        case SHORT:
        case LONG:
        case FLOAT:
        case IDENT:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BYTE:
            jj_consume_token(BYTE);
            break;
          case SHORT:
            jj_consume_token(SHORT);
            break;
          case LONG:
            jj_consume_token(LONG);
            break;
          case FLOAT:
            jj_consume_token(FLOAT);
            break;
          case INT:
            jj_consume_token(INT);
            break;
          case STRING:
            jj_consume_token(STRING);
            break;
          case IDENT:
            jj_consume_token(IDENT);
            break;
          default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(IDENT);
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACKET:
              ;
              break;
            default:
              jj_la1[21] = jj_gen;
              break label_6;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
          }
          label_7:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[22] = jj_gen;
              break label_7;
            }
            jj_consume_token(COMMA);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BYTE:
              jj_consume_token(BYTE);
              break;
            case SHORT:
              jj_consume_token(SHORT);
              break;
            case LONG:
              jj_consume_token(LONG);
              break;
            case FLOAT:
              jj_consume_token(FLOAT);
              break;
            case INT:
              jj_consume_token(INT);
              break;
            case STRING:
              jj_consume_token(STRING);
              break;
            case IDENT:
              jj_consume_token(IDENT);
              break;
            default:
              jj_la1[23] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            jj_consume_token(IDENT);
            label_8:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case LBRACKET:
                ;
                break;
              default:
                jj_la1[24] = jj_gen;
                break label_8;
              }
              jj_consume_token(LBRACKET);
              jj_consume_token(RBRACKET);
            }
          }
          break;
        default:
          jj_la1[25] = jj_gen;
          ;
        }
      } catch (ParseException e) {
   consumeUntil(g, e, "paramlist");
      }
    } finally {
      trace_return("paramlist");
    }
  }
